# starfish

./: .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  log.txt  pyproject.toml  pytest.ini  readme-web.md
.github/workflows/: lint-and-test.yaml  pre-commit.yml  publish_pypi.yaml  publish_testpypi.yaml
docs/: response.md
examples/: data_factory.ipynb  data_factory_release_check.ipynb  datafactor_input_examples.py  datafactory_test.ipynb  generate_data_with_topic.ipynb  llm_builder_workflow.py  sample_user_flow.py  simple_feedback_loop.py  starfish.drawio  structured_llm.ipynb  test.py  test_jupyter.ipynb  test_langgraph.py  test_langgraph_structured_llm.py  trial.py  trial_llm.py  trial_llm_depreciated.py
examples/usecases/: math_data_gen.ipynb  math_data_gen_template.ipynb
prebuilt_template/: README.md
prebuilt_template/function_calling/: README.md  sample_run.ipynb
prebuilt_template/generate_by_topic/: README.md  sample_run.ipynb
src/starfish/: __init__.py  version.py
src/starfish/common/: decorator.py  env_loader.py  exceptions.py  logger.py
src/starfish/components/: __init__.py  prepare_topic.py
src/starfish/data_factory/: config.py  constants.py  event_loop.py  factory.py  factory_.py  factory_executor_manager.py  factory_wrapper.py  job_manager.py  state.py  (+3 more)
starfish/: __init__.py
starfish/adapters/: huggingface_adapter.py  litellm_adapter.py  litellm_adapter_ext.py  ollama_adapter.py
starfish/api/: cli.py  main.py  server.py
starfish/common/: env_loader.py  exceptions.py  logger.py  utils.py
starfish/components/: prepare_topic.py
starfish/core/: component_registry.py  structured_llm.py
starfish/new_storage/: base.py  models.py
starfish/services/: model_management_service.py
starfish/storage/: __init__.py  base.py  filesystem.py  models.py  prefixed_filesystem.py
starfish/utils/: constants.py  data_factory.py  enums.py  errors.py  job_manager.py  task_runner.py
templates/: community_topic_generator.py  community_topic_generator_1.py
templates/community/: topic_generator.py
templates/starfish/: get_city_info_wf.py  math_problem_gen_wf.py
tests/: __init__.py  conftest.py  pytest.ini  sanitize.cfg  test_notebooks.py
tests/commons/: test_prompt.py
tests/data_factory/: db_lock.txt  test_data_factory.py
tests/data_ingest/: test_ingest.py
tests/data_template/: test_data_template.py
tests/integration/: __init__.py  pipeline_storage_integration_test.py
tests/new_storage/: __init__.py  test_storage_main.py
tests/pipeline/: test_pipeline_storage.py
tests/services/: test_structured_llm.py
tests/storage/: test_storage.py
tests/utils/: test_data_factory.py
vibe_coding/: PROJECT_STRUCTURE.md  data_factory.md  data_factory_examples.md  data_mcp.md  math_data_gen.md  project_purpose.md
web/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/amplify/: backend.ts
web/api/: api.py  main.py  storage.py
web/components/: PostHogProvider.tsx  app-page.tsx
web/src/: middleware.ts
web/styles/: globals.css
(+253 files in other folders)
