[project]
name = "starfish"
version = "0.1.0"
description = ""
authors = [
    {name = "Starfish AI Inc."}
]
readme = "README.md"

packages = [{ include = "starfish" }]

requires-python = ">=3.11,<4.0"
dependencies = [
    "litellm (>=1.65.1,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "typer (>=0.15.2,<0.16.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "cachetools (>=5.5.2,<6.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "aiofiles (>=24.1.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
ipykernel = "^6.29.5"


[tool.poetry.scripts]
starfish = "starfish.api.cli:main"

